# kazmas

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: code-quality.yml  dependabot-automerge.yml  release.yml
.husky/: commit-msg
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/sql/: schema.sql
src-tauri/src/: lib.rs
src-tauri/src/app/: error.rs  launch.rs  lock.rs  menu.rs  mod.rs  state.rs  window.rs
src-tauri/src/command/: error.rs  menu.rs  mod.rs  node.rs  world.rs
src-tauri/src/database/: checkpoint.rs  connection.rs  mod.rs  schema.rs
src-tauri/src/dto/: mod.rs  world.rs
src-tauri/src/event/: mod.rs
src-tauri/src/menu/: builder.rs  command.rs  descriptor.rs  handler.rs  mod.rs
src-tauri/src/model/: document.rs  metadata.rs  mod.rs  node.rs
src-tauri/src/state/: app.rs  label.rs  menu.rs  mod.rs  project.rs  registry.rs  spawn.rs  window.rs
src-tauri/src/store/: document.rs  metadata.rs  mod.rs  node.rs
src-tauri/src/utils/: label.rs  mod.rs  paths.rs  window.rs
src-tauri/src/world/: archive.rs  db.rs  manifest.rs  mod.rs  project.rs
src/actions/: world.ts
src/components/tiptap/editor/: EditorContent.vue  EditorProvider.vue  index.ts  utils.ts
src/components/tiptap/heading/: index.ts
src/components/tiptap/heading-toggle/: HeadingToggle.vue  useHeading.ts
src/components/tiptap/mark/: index.ts
src/components/tiptap/mark-button/: index.ts  useMark.ts
src/components/tiptap/mark-toggle/: MarkToggle.vue  index.ts  useMark.ts
src/components/tiptap/menu/: BubbleMenu.vue  FloatingMenu.vue  index.ts
src/components/tiptap/tooltip/: TooltipWrapper.vue  index.ts
src/components/tiptap/undo-redo-button/: UndoRedoButton.vue  index.ts  useUndoRedo.ts
src/components/ui/alert-dialog/: AlertDialog.vue  AlertDialogAction.vue  AlertDialogCancel.vue  AlertDialogContent.vue  AlertDialogDescription.vue  AlertDialogFooter.vue  AlertDialogHeader.vue  AlertDialogTitle.vue  AlertDialogTrigger.vue
src/components/ui/badge/: Badge.vue  index.ts
src/components/ui/breadcrumb/: BreadcrumbSeparator.vue
src/components/ui/button/: Button.vue
src/components/ui/context-menu/: ContextMenu.vue  ContextMenuCheckboxItem.vue  ContextMenuContent.vue  ContextMenuGroup.vue  ContextMenuItem.vue  ContextMenuLabel.vue  ContextMenuPortal.vue  ContextMenuRadioGroup.vue  ContextMenuRadioItem.vue  ContextMenuSeparator.vue  ContextMenuShortcut.vue  ContextMenuSub.vue  ContextMenuSubContent.vue  ContextMenuSubTrigger.vue  (+1 more)
src/composables/: useAppMenu.ts  useMenu.ts
src/dialogs/: AboutDialog.vue  NewWorldDialog.vue  about-dialog.ts  index.ts  save-world-dialog.ts  window-placement-dialog.ts
src/features/editor/: Editor.vue
src/features/node-breadcrumb/: NodeBreadcrumb.vue  index.ts
src/features/node-tree/: NodeTreeView.vue  index.ts
src/features/test-editor/: TestEditor.vue  index.ts
src/layouts/app-shell/: AppActivityBar.vue  AppContent.vue  AppMenuBar.vue  AppMenuItem.vue  AppShell.vue  AppSidebar.vue  AppStatusBar.vue  AppTitleBar.vue  AppWindowControls.vue
src/lib/: tiptap.ts
src/menus/: appMenu.ts  commands.ts  index.ts  menuCommands.ts
src/providers/dialog/: DialogProvider.vue  index.ts  useDialogProvider.ts
src/stores/: nodes.ts  world.ts
src/styles/: fonts.css  globals.css
src/utils/: platform.ts
(+52 files in other folders)
