[package]
name = "kazmas"
version = "0.0.1"
description = "The Kazmas App"
authors = ["duonghieu0712z"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kazmas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
log = "0.4.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
specta = { version = "2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
sqlx = { version = "0.9.0", features = ["sqlite"] }
tauri = { version = "2.11.2", features = ["image-png"] }
tauri-plugin-devtools = "2.1.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-prevent-default = "5.0.0"
tauri-specta = { version = "2.0.0-rc.25", features = ["javascript", "typescript"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "sync"] }
uuid = { version = "1.23.2", features = ["serde", "v7"] }
walkdir = "2.5.0"
zip = { version = "8.6.0", default-features = false, features = ["zstd"] }

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
