[package]
name = "kazmas"
version = "0.0.1"
description = "The Kazmas App"
license = "Apache-2.0 OR MIT"
authors = ["duonghieu0712z"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kazmas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
log = "0.4.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
specta = { version = "2.0.0-rc.25", features = ["chrono", "derive", "serde_json", "uuid"] }
specta-typescript = "0.0.12"
sqlx = { version = "0.9.0", features = ["chrono", "json", "sqlite", "uuid"] }
strum = { version = "0.28.0", features = ["derive"] }
tauri = { version = "2.11.2", features = ["devtools"] }
tauri-plugin-devtools = "2.1.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-prevent-default = "5.0.0"
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "sync", "time"] }
uuid = { version = "1.23.2", features = ["serde", "v7"] }
walkdir = "2.5.0"
zip = { version = "8.6.0", default-features = false, features = ["zstd"] }

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
